# gdal-wheels

./: README.md  build_wheels.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: build-wheels-micromamba.yml  build-wheels-simple.yml  build-wheels.yml  build-windows.yml
